<resources>
    <string name="app_name">SaveaLife</string>
    <string name="facebook_app_id">259962217739741</string>
    <string name="dashboard_item">Dashboard</string>
    <string name="map_item">Map</string>
    <string name="notifications_item">Notifications</string>
    <string name="contacts_item">Contacts</string>
    <string name="settings_item">Settings</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="autocomplete_hint">Search Location</string>

    <string name="savealife_welcome">Welcome to SaveaLife! \nHelp us help you.</string>
    <string name="continue_btn_text">Continue</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="code_failure_text">DIDN\'T GET IT?</string>
    <string name="verification_text">We have sent you a verification code. Please, enter it to this field:</string>
    <string name="verification_hint">Code</string>

    <string name="sign_up_text">Please fill these fields:</string>
    <string name="first_name_hint">Your first name</string>
    <string name="last_name_hint">Your last name</string>
    <string name="sign_up_btn_text">Sign up</string>
    <string name="sign_up_bottom_text">By signing up you agree to SaveaLife\'s Terms of Use</string>
    <string name="sos_inactive_text">In case of danger press this button to report your location</string>
    <string name="sos_active_text">Your signal is visible now. You\'ll get help soon</string>
    <string name="driver_mode">Driver mode</string>
    <string name="event_details_btn_text">View details</string>

    <string name="in_app">IN APP</string>
    <string name="not_in_app">NOT IN APP</string>
    <string name="unspecified">unspecified</string>
    <string name="invite">Invite</string>
    <string name="emergency_header">In case of this situation we\'ll send a message with your location to these people:</string>
    <string name="edit_emergency_text">Edit list</string>
    <string name="save_action">Save</string>
    <string name="cancel_action">Cancel</string>
    <string name="phone_str">Phone</string>
    <string name="profile_role">role</string>
    <string name="call">call</string>
    <string name="public_info">PUBLIC INFO</string>
    <string name="username">Name</string>
    <string name="phone">Phone</string>
    <string name="private_info">Private info [NOT IMPLEMENTED]</string>
    <string name="email">E-mail</string>
    <string name="sex">Sex</string>
    <string name="age">Age</string>
    <string name="diseases">Diseases</string>
    <string name="your_password_hint">Your password</string>
    <string name="password_confirm_hint">Confirm a password</string>

    <string name="latitude_key">lat_key</string>
    <string name="longitude_key">long_key</string>

    <string name="password">password</string>
    <string name="phone_number">phone_number</string>
    <string name="name">name</string>
    <string name="firstName">firstName</string>
    <string name="lastName">lastName</string>
    <string name="firstNameProfile">First name</string>
    <string name="lastNameProfile">Last name</string>
    <string name="med_qualification">med_qualification</string>
    <string name="current_token">current_token</string>
    <string name="isLoggedIn">isLoggedIn</string>

    <string name="auth_token">auth_token</string>

    <string name="internet_connection_check">Check your internet connection</string>

    <string name="dont_match">Passwords don\'t match</string>
    <string name="forgot_my_password">forgot my password</string>
    <string name="sign_in_text">Hello, %s. Please, provide your password</string>
    <string name="sign_in">sign in</string>
    <string name="new_account">register new account</string>
    <string name="invite_friends">Invite friends</string>

    <string name="driver">Driver</string>
    <string name="rambler">Rambler</string>
    <string name="ambulance">Ambulance</string>
    <string name="sos">SOS</string>
    <string name="help">help</string>

    <string name="address_dialog_title"></string>
    <string name="no_contacts">No contacts yet. Swipe to refresh. And don\'t forget to check your Internet connection</string>
    <string name="refresh">refresh</string>
    <string name="no_possible_contacts">You have no contacts that can be added to your emergency list</string>
    <string name="firebase_token">firebaseToken</string>
    <string name="no_notifications">You have no notifications yet. Swipe to refresh.</string>

    <string name="dashboard_is_activated">activated_key</string>
</resources>
