<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        android:gravity="center_horizontal"
        android:text="@string/sign_up_text"
        android:textSize="@dimen/text_size_medium" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/first_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/last_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <com.jaredrummler.materialspinner.MaterialSpinner
        android:id="@+id/qualifications_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        android:text="@string/sign_up_btn_text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/standard_elem_margin"
        android:layout_weight="1"
        android:gravity="bottom"
        android:padding="@dimen/standard_elem_padding"
        android:text="@string/sign_up_bottom_text"
        android:textSize="@dimen/text_size_medium" />

</LinearLayout>