<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sign_in_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/standard_elem_margin"
        android:gravity="center_horizontal"
        android:padding="@dimen/standard_elem_padding" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        app:hintTextAppearance="@style/TextAppearance.AppCompat">

        <EditText
            android:id="@+id/sign_in_pswd_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password_hint"
            android:inputType="textPassword" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/forgot_pswd_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        android:clickable="true"
        android:gravity="center_horizontal"
        android:text="@string/forgot_my_password"
        android:textSize="@dimen/text_size_medium" />

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/RoundedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_elem_margin"
        android:layout_marginTop="@dimen/standard_elem_margin"
        android:background="@drawable/green_button"
        android:text="@string/sign_in" />

    <Button
        android:id="@+id/register_new_acc_btn"
        style="@style/RoundedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/standard_elem_margin"
        android:layout_marginTop="@dimen/standard_elem_margin"
        android:background="@drawable/green_button"
        android:text="@string/new_account" />

</LinearLayout>