<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/contact_profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_centerInParent="true"
                android:padding="@dimen/standard_elem_padding"
                android:src="@drawable/my_photo" />

            <android.support.v4.widget.Space
                android:id="@+id/separator"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@id/contact_profile_image" />

            <TextView
                android:id="@+id/points_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/separator"
                android:layout_margin="@dimen/standard_elem_margin"
                android:gravity="center_horizontal"
                android:text="62 points"
                android:textSize="@dimen/text_size_large" />

            <Switch
                android:id="@+id/status_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/points_tv"
                android:layout_centerHorizontal="true"
                android:text="@string/driver_mode" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />


        <android.support.v7.widget.GridLayout
            android:id="@+id/public_info_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2"
            app:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/public_info"
                app:layout_columnSpan="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/name"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="Slava Petrochenko"
                app:layout_columnWeight="4" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/phone"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="+380 66 41 00 958"
                app:layout_columnWeight="4" />

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/profile_qualifications_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_elem_margin"
                app:layout_columnSpan="2" />

        </android.support.v7.widget.GridLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/private_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="@dimen/standard_elem_margin"
                android:layout_marginTop="15dp"
                android:gravity="center_horizontal"
                android:text="@string/private_info" />

            <ImageButton
                android:id="@+id/private_info_help"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/standard_elem_margin"
                android:layout_toRightOf="@id/private_info_tv"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_help_black_24dp" />
        </RelativeLayout>


        <android.support.v7.widget.GridLayout
            android:id="@+id/private_info_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:columnCount="2">

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/email"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="vs.petrochenko@gmail.com"
                app:layout_columnWeight="4" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/sex"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_sex"
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="male"
                app:layout_columnWeight="4" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/age"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_age"
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="19"
                app:layout_columnWeight="4" />

            <TextView
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="@string/diseases"
                app:layout_columnWeight="2" />

            <TextView
                android:id="@+id/profile_diseases"
                android:layout_width="0dp"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="Not specified"
                app:layout_columnWeight="4" />

            <Button
                android:id="@+id/sign_out_btn"
                android:layout_width="match_parent"
                android:layout_margin="@dimen/standard_elem_margin"
                android:text="Sign out"
                app:layout_columnSpan="2" />

        </android.support.v7.widget.GridLayout>


    </LinearLayout>
</ScrollView>
