<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/phone_number_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ImageView
            android:id="@+id/login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="@dimen/standard_elem_margin"
            android:src="@drawable/enter_screens_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_img"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"
            android:text="@string/savealife_welcome"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/text_size_medium" />

    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_elem_margin"
        android:theme="@style/EditTextHint">

        <EditText
            android:id="@+id/phone_number_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_hint"
            android:inputType="phone"
            android:ellipsize="start"
            android:gravity="center_horizontal"
            android:textColor="@color/colorWhite" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/phone_number_btn"
        style="@style/RoundedButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="@dimen/standard_elem_margin"
        android:background="@drawable/blue_button"
        android:text="@string/continue_btn_text"
        android:textColor="@color/colorWhite" />

</LinearLayout>